--- a/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
+++ b/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
@@ -18,10 +18,10 @@
 
         <div class="row">
             <div class="col">
-                <h1 class="text-black mt-3 ms-4">Nombre del proyecto</h1>
+                <h1 class="text-black mt-3 ms-4"> {{proyecto.nombre}}</h1>
             </div>
             <div class="col-1">
-                <a [routerLink]="['/inicio-cliente']"><img class="mt-4" src="./assets/flecha-hacia-atras.png" alt="atras" width="50" height="50" /></a>
+                <a [routerLink]="['/inicio',this.usuario._id]"><img class="mt-4" src="./assets/flecha-hacia-atras.png" alt="atras" width="50" height="50" /></a>
             </div>
         </div>
 
@@ -45,10 +45,7 @@
                     <div class="col-9 m-3">
                         <h2>Descripción</h2>
                         <section class="text-justify">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan facilisis dui eu maximus. Donec volutpat finibus nunc, sodales tincidunt diam efficitur non. Integer pulvinar egestas volutpat. Ut quam orci, tincidunt ut lectus vel, viverra malesuada
-                            augue. Vestibulum ante massa, molestie quis lorem ullamcorper, finibus pellentesque turpis. Aliquam convallis turpis odio, eget tincidunt ipsum lobortis vel. Maecenas vitae dui luctus, posuere orci et, scelerisque leo. Sed
-                            rutrum nulla vitae consectetur maximus. Vivamus quis dui odio. Praesent vulputate aliquet ante sit amet aliquet. Duis convallis sollicitudin dui vitae placerat. Proin ac commodo massa. Etiam eu tortor blandit, porttitor mi
-                            sed, vehicula turpis.
+                         {{proyecto.descripcion}}
                         </section>
 
                     </div>
