--- a/NRP/src/app/components/crear-tarea/crear-tarea.component.html
+++ b/NRP/src/app/components/crear-tarea/crear-tarea.component.html
@@ -29,12 +29,12 @@
             <div class="row mt-3 ms-4 ">
                 <div class="col-3 mb-3 ">
                     <label for="exampleFormControlInput1 " class="form-label ">Nombre de tarea </label>
-                    <input type="text " class="form-control " id="exampleFormControlInput1 " name="nombre " placeholder="Nombre " required />
+                    <input type="text " class="form-control " id="exampleFormControlInput1 " name="nombre " #nombre="ngModel" [(ngModel)] = "requisito.nombre"  placeholder="Nombre " required />
                 </div>
                 <div class="row ">
                     <div class="col-5 mb-3 ">
                         <label for="exampleFormControlTextarea1 " class="form-label ">Descripción de la tarea </label>
-                        <textarea class="form-control " id="exampleFormControlTextarea1 " name="descripcion " rows="3 " required></textarea>
+                        <textarea class="form-control " id="exampleFormControlTextarea1 " name="descripcion" #descripcion="ngModel" [(ngModel)] = "requisito.descripcion"  rows="3 " required></textarea>
                     </div>
                 </div>
                 <div class="mt-3 row">
@@ -53,7 +53,7 @@
                     <div class="col "></div>
                     <div class="col ">
                         Fecha comienzo
-                        <input matInput [matDatepicker]="datepicker " name="fechaInicio " placeholder="Elige una fecha " style="display: inline; width: 125px " required />
+                        <input matInput [matDatepicker]="datepicker " name="fechaInicio " #fechaInicio="ngModel" [(ngModel)] = "requisito.fechaInicio"  placeholder="Elige una fecha " style="display: inline; width: 125px " required />
                         <mat-datepicker-toggle matSuffix [for]="datepicker "></mat-datepicker-toggle>
                         <mat-datepicker #datepicker></mat-datepicker>
                     </div>
@@ -63,7 +63,7 @@
                     <div class="col "></div>
                     <div class="col ">
                         Fecha fin
-                        <input matInput [matDatepicker]="picker " name="fechaFin " placeholder="Elige una fecha " style="display: inline; width: 125px " required />
+                        <input matInput [matDatepicker]="picker " name="fechaFin "  #fechaFin="ngModel" [(ngModel)] = "requisito.fechaFin" placeholder="Elige una fecha " style="display: inline; width: 125px " required />
                         <mat-datepicker-toggle matSuffix [for]="picker "></mat-datepicker-toggle>
                         <mat-datepicker #picker></mat-datepicker>
                     </div>
@@ -130,7 +130,7 @@
                     <button type="button " class="btn btn-danger ms-5 " [routerLink]="[ '/proyecto', proyecto._id] ">
               Cancelar
             </button>
-                    <button class="btn btn-success ms-3 " type="submit " [disabled]="!formCrearTarea.form.valid ">
+                    <button class="btn btn-success ms-3 " type="submit " [disabled]="!formCrearTarea.form.valid " (click)="crearRequisito()">
               Guardar
             </button>
                 </div>
