--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -1,1 +1,25 @@
-<p>gestionar-tarea works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Pagina crear tarea jefe de proyecto</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+</head>
+
+<body>
+    <div class="container">
+
+        <!--Inicio del menu-->
+        <menu></menu>
+        <!--Fin del menu-->
+
+        <div class="row">
+            <div class="col">
+                <h2>Priorizar tareas</h2>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
