--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Pagina crear tarea jefe de proyecto</title>
+    <title>Pagina priorización de las tareas</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
     <div class="container">
-
         <!--Inicio del menu-->
         <menu></menu>
         <!--Fin del menu-->
