--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -15,7 +15,7 @@
 
         <div class="row">
             <div class="col">
-                <h2>Priorizar tareas</h2>
+                <h1 class="text-black mt-3 ms-4">Priorizar tareas</h1>
             </div>
         </div>
     </div>
