--- a/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
+++ b/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
@@ -63,10 +63,10 @@
                     <div class="row">
                         <div class="col-9">
                             <div class="accordion" id="accordionExample">
-                                <div class="accordion-item">
+                                <div *ngFor="let tarea of arrTareasProyecto" class="accordion-item">
                                     <h2 class="accordion-header" id="headingOne">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            <strong>Tarea 1</strong>
+                                            <strong>{{tarea.nombre}}</strong>
                                         </button>
                                     </h2>
                                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
