--- a/NRP/src/app/components/crear-tarea/crear-tarea.component.html
+++ b/NRP/src/app/components/crear-tarea/crear-tarea.component.html
@@ -37,10 +37,10 @@
                         <textarea class="form-control " id="exampleFormControlTextarea1 " name="descripcion" #descripcion="ngModel" [(ngModel)] = "requisito.descripcion"  rows="3 " required></textarea>
                     </div>
                 </div>
-                <div class="mt-3 row">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Esfuerzo de la tarea</label>
+                <div class="mt-3 row-3">
+                    <label for="inputPassword" class="col-sm-2 col-form-label"><strong>Esfuerzo de la tarea [1 - 10]</strong></label>
                     <div class="col-2">
-                        <input class="form-control" type="number" name="coste" #coste="ngModel" [(ngModel)] = "requisito.coste" required placeholder="[1 - 10]">
+                        <input class="form-control" type="number" name="coste" #coste="ngModel" [(ngModel)] = "requisito.coste" placeholder = "[1 - 10]"  required>
                   </div>
                 </div>
               
