--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -15,9 +15,30 @@
 
         <div class="row">
             <div class="col">
-                <h1 class="text-black mt-3 ms-4">Priorizar tareas</h1>
+                <h1 class="text-black mt-3 ms-4">Priorizar tareas - {{proyecto.nombre}}</h1>
+            </div>
+            <div class="col-1">
+                <a [routerLink]="['/proyecto',proyecto._id]"><img class="mt-4" src="./assets/flecha-hacia-atras.png" alt="atras" width="50" height="50" /></a>
             </div>
         </div>
+        <form #formPriorizarTareas="ngForm">
+            <div class="mt-3 ms-4 row">
+                <label for="inputLimite" class="col-sm-2 col-form-label">Limite de esfuerzo </label>
+                <div class="col-sm-2">
+                    <input class="form-control" type="number" placeholder="[1 - 10]" required>
+              </div>
+              <div class="col-auto ms-5">
+                <button  type="submit" class="btn btn-success mb-3" [disabled]="!formPriorizarTareas.form.valid" >Priorizar tareas</button>
+              </div>
+            </div>
+           
+          </form>
+
+          <div class="row mt-5 ms-3">
+              <div class="col">
+                <h1>Lista de tareas priorizadas</h1>
+              </div>
+          </div>
     </div>
 </body>
 
