--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -53,6 +53,7 @@
                         </section>
 
                     </div>
+                    
                     <div class="col-2">
                         <div id="fechaInicioFin" class="row align-items-center mt-3 ms-4">
                             <div class="col">
@@ -75,6 +76,15 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                    <div class="row ms-2">
+                        <h1>Priorize sus tareas del proyecto</h1>
+                        <div class="col">
+                            <a [routerLink]="['/gestionar-tarea',proyecto._id]"><button type="button" class="btn btn-primary ">
+                                Priorzar tareas
+                              </button></a>
+                        </div>
+
                     </div>
                     <div class="row justify-content-end">
                         <div class="col-2 mt-5">
@@ -108,8 +118,16 @@
                         <div class="col-9">
                             <ul class="list-group list-group-flush ms-3">
                                 <li *ngFor="let tarea of arrTareasProyecto" class="list-group-item">
-                                    <a [routerLink]="['/descripcion-tarea-cliente',proyecto._id]">{{tarea.nombre}}</a>
-                                    <img id="addTarea" src="./assets/borrar-tarea.png" alt="Borrar usuario" width="40" height="40" style="cursor: pointer; margin-left: 88%;" />
+                                    <div class="row">
+                                        <div class="col">
+                                            <a [routerLink]="['/descripcion-tarea-cliente',proyecto._id]">{{tarea.nombre}}</a>
+                                        </div>
+                                        <div class="col">
+                                            <img id="addTarea" src="./assets/borrar-tarea.png" alt="Borrar usuario" width="40" height="40" style="cursor: pointer; margin-left: 90%;" />
+                                        </div>
+                                    </div>
+                                    </li>
+                                    
                             </ul>
                         </div>
                     </div>
@@ -136,10 +154,15 @@
                         <div class="col-9">
                             <ul class="list-group list-group-flush ms-3 scrollarea">
                                 <li *ngFor="let usuarioProyecto of arrUsuariosProyecto;let indice = index" class="list-group-item">
-                                    <a [routerLink]="['/proyecto']">{{usuarioProyecto.nombre}}</a>
-                                    <img id="deleteUsuario" src="./assets/borrar-usuario.png" alt="Borrar usuario" width="40" height="40" style="cursor: pointer; margin-left: 88%;" (click)="deleteUsuarios(indice)" />
-                                </li>
-
+                                <div class="row">
+                                    <div class ="col">
+                                        <a [routerLink]="['/proyecto']">{{usuarioProyecto.nombre}}</a>
+                                    </div>
+                                    <div class ="col">
+                                        <img id="deleteUsuario" src="./assets/borrar-usuario.png" alt="Borrar usuario" width="40" height="40" style="cursor: pointer;" style="margin-left: 90%;" (click)="deleteUsuarios(indice)" />
+                                    </div>
+                                </div>
+                            </li>
                             </ul>
                         </div>
 
