--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <title>Pagina cliente principal</title>
@@ -81,7 +81,7 @@
                         <h1>Priorize sus tareas del proyecto</h1>
                         <div class="col">
                             <a [routerLink]="['/gestionar-tarea',proyecto._id]"><button type="button" class="btn btn-primary ">
-                                Priorzar tareas
+                                Priorizar tareas
                               </button></a>
                         </div>
 
