--- a/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
+++ b/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
@@ -63,7 +63,7 @@
                     <div class="row">
                         <div class="col-9">
                             <div class="accordion" id="accordionExample">
-                                <div *ngFor="let tarea of arrTareasProyecto" class="accordion-item">
+                                <div *ngFor="let tarea of arrTareasProyecto; let indice = index;" class="accordion-item">
                                     <h2 class="accordion-header" id="headingOne">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                             <strong>{{tarea.nombre}}</strong>
@@ -77,17 +77,24 @@
 
                                             </div>
                                             <hr>
-                                            <div class="row">
-                                                <div class="col-5">
-                                                    <span><strong>Introduzca la importancia de la tarea</strong></span>
+                                            <form #formImportanciaRequisito (ngSubmit)="updateImportancia(indice)">
+                                                <div class="row">
+                                                    <div class="col-5">
+                                                        <span><strong>Introduzca la importancia de la tarea</strong></span>
+                                                    </div>
+                                                    <div class="col-2">
+                                                        <div *ngFor="let importanciaBucle of arrTareasProyecto[indice].prioridad">
+
+
+                                                            <input *ngIf="importanciaBucle.usuario == usuario._id" id="importancia" class="form-control" type="number" name="importancia" #importancia="ngModel" [(ngModel)] = "importanciaBucle.valor" placeholder="[1 - 5]" required>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                                <div class="col-2">
-                                                    <input class="form-control" type="number" placeholder="[1 - 5]" required>
+                                                <div class="row-2">
+                                                    <button type="button" class="btn btn-success">Guardar</button>
                                                 </div>
-                                            </div>
-                                            <div class="row-2">
-                                                <button type="button" class="btn btn-success">Guardar</button>
-                                            </div>
+                                            </form>
+                                         
                                         </div>
                                     </div>
                                 </div>
