--- a/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
+++ b/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
@@ -62,44 +62,46 @@
                 <div class="row justify-content-end mt-3">
                     <div class="row">
                         <div class="col-9">
-                            <div class="accordion" id="accordionExample">
-                                <div *ngFor="let tarea of arrTareasProyecto; let indice = index;" class="accordion-item">
-                                    <h2 class="accordion-header" id="headingOne">
-                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            <strong>{{tarea.nombre}}</strong>
-                                        </button>
-                                    </h2>
-                                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <div class="row">
+                                <div *ngFor="let tarea of arrTareasProyecto; let indice = index;"class="col border mt-2 rounded">
+                                    <div class="row mt-3 ms-1">
+                                        
+                                        <div class="col-9">
+                                            <span style="font-size: 25px;">
+                                                {{tarea.nombre}} 
+                                            </span>  
+                                        </div> 
+                                                  
+                                    </div>
+                                    <hr>
+                                    
+                                        
+                                            <div class="row ms-1">
                                                 <h2>Descripción</h2>
                                                 <p>{{tarea.descripcion}}</p>
 
                                             </div>
                                             <hr>
-                                            <form #formImportanciaRequisito (ngSubmit)="updateImportancia(indice)">
-                                                <div class="row">
+                                                <div class="row ms-2">
+    
                                                     <div class="col-5">
-                                                        <span><strong>Introduzca la importancia de la tarea</strong></span>
-                                                    </div>
-                                                    <div class="col-2">
                                                         <div *ngFor="let importanciaBucle of arrTareasProyecto[indice].prioridad">
-
-
-                                                            <input *ngIf="importanciaBucle.usuario == usuario._id" id="importancia" class="form-control" type="number" name="importancia" #importancia="ngModel" [(ngModel)] = "importanciaBucle.valor" placeholder="[1 - 5]" required>
+                                                            <div *ngIf="importanciaBucle.usuario == usuario._id" class="mt-3 col-10">
+                                                                <span class="">Importancia actual de la tarea = <strong>{{importanciaBucle.valor}}</strong></span>
+                                                            </div>
+                                                           
                                                         </div>
+                                                        
                                                     </div>
                                                 </div>
-                                                <div class="row-2">
-                                                    <button type="button" class="btn btn-success">Guardar</button>
+                                                <div class="row-2 m-3">
+                                                    <button type="button" class="btn btn-primary"[routerLink]="['/add-valor-tarea',tarea._id,proyecto._id]">Añadir importancia</button>
                                                 </div>
-                                            </form>
-                                         
-                                        </div>
-                                    </div>
+                                          
+                                              
+                                      
                                 </div>
                             </div>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
