--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -35,8 +35,9 @@
           </form>
 
           <div class="row mt-5 ms-3">
-              <div class="col">
-                <h1>Lista de tareas priorizadas</h1>
+            <h1>Lista de tareas priorizadas</h1>
+              <div class="col-11 shadow border bg-white rounded ms-3 ">
+               g
               </div>
           </div>
     </div>
