--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -41,6 +41,11 @@
            Usuarios participantes
           </button>
             </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="priorizar-tab" data-bs-toggle="tab" data-bs-target="#priorizar" type="button" role="tab" aria-controls="priorizar" aria-selected="false">
+          Priorizar tareas
+          </button>
+            </li>
         </ul>
         <!--Inicio de la información del proyecto-->
         <div class="tab-content" id="myTabContent">
@@ -77,15 +82,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row ms-2">
-                        <h1>Priorize sus tareas del proyecto</h1>
-                        <div class="col">
-                            <a [routerLink]="['/gestionar-tarea',proyecto._id]"><button type="button" class="btn btn-primary ">
-                                Priorizar tareas
-                              </button></a>
-                        </div>
-
-                    </div>
+                  
                     <div class="row justify-content-end">
                         <div class="col-2 mt-5">
                             <button type="button" class="btn btn-success ">
@@ -199,6 +196,45 @@
                 </div>
             </div>
             <!--Fin de la información del proyecto-->
+
+            <!--Inicio de la configuracion del proyecto-->
+            <div class="tab-pane fade show" id="priorizar" role="tabpanel" aria-labelledby="priorizar-tab">
+                <div class="row">
+                    <div class="col">
+                        <h2 class="m-3">Priorize sus tareas del proyecto <a [routerLink]="['/gestionar-tarea',proyecto._id]"><button type="button" class="btn">
+                            <img id="priorizarTarea" src="./assets/time.png" alt="" width="60" height="60">
+                           </button></a></h2>
+                    </div>
+                </div>
+
+                <div class="row mt-2 m-3">
+                    <h2>Lista de tareas priorizadas</h2>
+                   
+                    <table class="table">
+                        <thead>
+                          <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Nombre</th>
+                            <th scope="col">Fecha inicio</th>
+                            <th scope="col">Fecha fin</th>
+                            <th scope="col">Importancia</th>
+                            <th scope="col">Esfuerzo</th>
+                          </tr>
+                        </thead>
+                        <tbody *ngFor="let tarea of proyecto.planificacion;let indice = index">
+                          <tr>
+                            <th scope="row">{{indice + 1}}</th>
+                            <td>{{tarea.requisito.nombre}}</td>
+                            <td>{{tarea.requisito.fechaInicio}}</td>
+                            <td>{{tarea.requisito.fechaFin}}</td>
+                            <td>{{tarea.importancia}}</td>
+                            <td>{{tarea.coste}}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                  </div>
+                <!--Fin de la configuracion del proyecto-->
+            </div>
         </div>
 
         <!--Fin del contenido de INICIO-->
