--- a/NRP/src/app/components/menu/menu.component.html
+++ b/NRP/src/app/components/menu/menu.component.html
@@ -21,9 +21,8 @@
                         Bienvenido, {{ usuario.nombre }}
                       </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Configuración</a></li>
                             <li>
-                                <a class="dropdown-item" (click)="cerrarSesion()">Cerrar sesión</a
+                                <a class="dropdown-item" style="cursor: pointer;" (click)="cerrarSesion()">Cerrar sesión</a
                           >
                         </li>
                       </ul>
