--- a/NRP/src/app/components/proyecto/proyecto.component.html
+++ b/NRP/src/app/components/proyecto/proyecto.component.html
@@ -114,13 +114,13 @@
                     <div class="row">
                         <div class="col-9">
                             <ul class="list-group list-group-flush ms-3">
-                                <li *ngFor="let tarea of arrTareasProyecto" class="list-group-item">
+                                <li *ngFor="let tarea of arrTareasProyecto;let indice = index" class="list-group-item">
                                     <div class="row">
                                         <div class="col">
                                             <a [routerLink]="['/descripcion-tarea-cliente',proyecto._id]">{{tarea.nombre}}</a>
                                         </div>
                                         <div class="col">
-                                            <img id="addTarea" src="./assets/borrar-tarea.png" alt="Borrar usuario" width="40" height="40" style="cursor: pointer; margin-left: 90%;" />
+                                            <img id="addTarea" src="./assets/borrar-tarea.png" alt="Borrar usuario" width="40" height="40" style="cursor: pointer; margin-left: 90%;" (click)="borrarRequisito(indice)" />
                                         </div>
                                     </div>
                                     </li>
