Retocando la aplicacion para el Sprint 1

--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -53,8 +53,8 @@
                     <td>{{tarea.requisito.nombre}}</td>
                     <td>{{tarea.requisito.fechaInicio}}</td>
                     <td>{{tarea.requisito.fechaFin}}</td>
-                    <td>{{tarea.importancia}}</td>
-                    <td>{{tarea.coste}}</td>
+                    <td class="text-center">{{tarea.importancia}}</td>
+                    <td class="text-center">{{tarea.coste}}</td>
                   </tr>
                 </tbody>
               </table>
