--- a/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
+++ b/NRP/src/app/components/proyecto-cliente/proyecto-cliente.component.html
@@ -58,7 +58,7 @@
 
 
             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                <h2 class="m-3">Lista de tareas del proyecto</h2>
+                <h2 class="m-3">Lista de tareas del proyecto asignadas para ti</h2>
                 <div class="row justify-content-end mt-3">
                     <div class="row">
                         <div class="col-9">
