--- a/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
+++ b/NRP/src/app/components/gestionar-tarea/gestionar-tarea.component.html
@@ -34,7 +34,11 @@
            
           </form>
 
-          <div class="row mt-5 ms-3">
+          <div *ngIf="proyecto.planificacion.length == 0" class="row mt-5 ms-3 text-center">
+                  <h1>Introduzca un limite de esfuerzo para poder priorizar las tareas</h1>
+          </div>
+
+          <div *ngIf="proyecto.planificacion.length != 0" class="row mt-5 ms-3">
             <h1>Lista de tareas priorizadas</h1>
             <table class="table">
                 <thead>
@@ -53,8 +57,9 @@
                     <td>{{tarea.requisito.nombre}}</td>
                     <td>{{tarea.requisito.fechaInicio}}</td>
                     <td>{{tarea.requisito.fechaFin}}</td>
-                    <td class="text-center">{{tarea.importancia}}</td>
-                    <td class="text-center">{{tarea.coste}}</td>
+                    <td *ngIf= "tarea.importancia == 0">Sin importancia</td>
+                    <td  *ngIf= "tarea.importancia != 0" >{{tarea.importancia}}</td>
+                    <td >{{tarea.coste}}</td>
                   </tr>
                 </tbody>
               </table>
