--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
@@ -95,8 +95,10 @@
            <button type="button " class="btn btn-success ms-5 " [routerLink]="[ '/proyecto', proyecto._id] ">
                Modificar tarea 
                 </button>
-       
-          
+                <button type="button " class="btn btn-danger ms-5 mt-2 " (click) = "borrarRequisito()">
+                    Terminar tarea
+                     </button>
+
       </div>
 </div>
 
