--- a/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
+++ b/NRP/src/app/components/descripcion-tarea-cliente/descripcion-tarea-cliente.component.html
@@ -32,14 +32,14 @@
             </div>
 
             <div class="row ">
-                <div class="col-5 mb-3 ">
+                <div class="col-6 mb-3 ">
                     <h2>Responsables de la tarea</h2>
                     <table class="table">
                         <thead>
                           <tr>
                             <th scope="col">#</th>
                             <th scope="col">Nombre</th>
-                            <th scope="col">Peso del usuario</th>
+                            <th scope="col">Peso del usuario en el proyecto</th>
                             <th scope="col">Importancia asignada a la tarea</th>
                           </tr>
                         </thead>
@@ -47,7 +47,7 @@
                           <tr>
                             <th scope="row">{{indice + 1}}</th>
                             <td class="text-center">{{usuario.nombre}}</td>
-                            <td class="text-center">En proceso</td>
+                            <td class="text-center">{{pesosUsuarios[indice]}}</td>
                             <td *ngIf="requisito.prioridad[indice].valor == 0" class="text-center">Importancia sin asignar aún</td>
                             <td *ngIf="requisito.prioridad[indice].valor != 0" class="text-center">{{requisito.prioridad[indice].valor}}</td>
                           </tr>
